refactor: update Cost and Drive services, repositories, and mappers; enhance API documentation